k8s/common/console-k8s/jhipster-logstash.yml
# kubectl label nodes scw-k8s-bonlimousin-default-590502482b6a4bcaa3 bonlimousin.com/jhipster-logstash=prod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-logstash
  namespace: bonlimousin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-logstash
  template:
    metadata:
      labels:
        app: jhipster-logstash
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: bonlimousin.com/jhipster-logstash
                    operator: In
                    values:
                      - prod
      containers:
        - image: jhipster/jhipster-logstash:v4.1.0
          name: jhipster-logstash
          ports:
            - containerPort: 5000
              protocol: UDP
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-logstash
  namespace: bonlimousin
  labels:
    app: jhipster-logstash
spec:
  ports:
    - name: 'udp'
      port: 5000
      protocol: UDP
      targetPort: 5000
    - name: 'tcp'
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: jhipster-logstash
