k8s/common/console-k8s/jhipster-zipkin.yml
# kubectl label nodes scw-k8s-bonlimousin-default-590502482b6a4bcaa3 bonlimousin.com/jhipster-zipkin=prod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-zipkin
  namespace: bonlimousin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-zipkin
  template:
    metadata:
      labels:
        app: jhipster-zipkin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: bonlimousin.com/jhipster-zipkin
                    operator: In
                    values:
                      - prod
      containers:
        - name: jhipster-zipkin
          image: jhipster/jhipster-zipkin:v4.1.0
          ports:
            - containerPort: 9411
              name: http
              protocol: TCP
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-zipkin
  namespace: bonlimousin
  labels:
    app: jhipster-zipkin
spec:
  ports:
    - name: http
      port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    app: jhipster-zipkin
