k8s/common/console-k8s/jhipster-console-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jhipster-console
  namespace: bonlimousin
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - the admin for console'
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: bon-letsencrypt-prod
spec:
  tls:
  - hosts:
    -  console.limousin.se
    secretName: console-limousin-se-tls
  rules:    
    - host: jhipster-console.bonlimousin.393a4c58-1580-4f08-89d7-15f104acfc8e.nodes.k8s.fr-par.scw.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: jhipster-console
              servicePort: 5601     
    - host: console.limousin.se
      http:
        paths:
          - path: /
            backend:
              serviceName: jhipster-console
              servicePort: 5601
